make-a-wish-salesforce/src/objects/FA_Account_Numbers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It hold the chapter package values.</description>
    <fields>
        <fullName>Chapter_Account_ID__c</fullName>
        <description>Chapter paid account id</description>
        <label>Active Vol Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Package__c</fullName>
        <label>Chapter Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Paid__c</fullName>
        <description>Chapter paid package value</description>
        <label>Chapter Paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Account_ID__c</fullName>
        <description>Volunteer paid account ID</description>
        <label>Pros Vol Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Package__c</fullName>
        <label>Volunteer Package</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Paid__c</fullName>
        <description>Volunteer paid package value</description>
        <label>Volunteer Paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FA Account Numbers</label>
</CustomObject>